@@ -108,32 +108,6 @@ table {
   --gray-hue: 0;
   --gray-sat: 0%;
   --gray-lum: 50%;
-  --black-95: rgba(4, 4, 4, 0.95);
-  --black-90: rgba(4, 4, 4, 0.9);
-  --black-80: rgba(4, 4, 4, 0.8);
-  --black-70: rgba(4, 4, 4, 0.7);
-  --black-60: rgba(4, 4, 4, 0.6);
-  --black-50: rgba(4, 4, 4, 0.5);
-  --black-40: rgba(4, 4, 4, 0.4);
-  --black-30: rgba(4, 4, 4, 0.3);
-  --black-20: rgba(4, 4, 4, 0.2);
-  --black-10: rgba(4, 4, 4, 0.1);
-  --black-05: rgba(4, 4, 4, 0.05);
-  --black-025: rgba(4, 4, 4, 0.025);
-  --black-0125: rgba(4, 4, 4, 0.0125);
-  --white-95: rgba(255, 255, 255, 0.95);
-  --white-90: rgba(255, 255, 255, 0.9);
-  --white-80: rgba(255, 255, 255, 0.8);
-  --white-70: rgba(255, 255, 255, 0.7);
-  --white-60: rgba(255, 255, 255, 0.6);
-  --white-50: rgba(255, 255, 255, 0.5);
-  --white-40: rgba(255, 255, 255, 0.4);
-  --white-30: rgba(255, 255, 255, 0.3);
-  --white-20: rgba(255, 255, 255, 0.2);
-  --white-10: rgba(255, 255, 255, 0.1);
-  --white-05: rgba(255, 255, 255, 0.05);
-  --white-025: rgba(255, 255, 255, 0.025);
-  --white-0125: rgba(255, 255, 255, 0.0125);
   --aqua: #7fdbff;
   --blue: #0074d9;
   --navy: #001f3f;
@@ -3889,112 +3863,8 @@ hr {
   --border-color: var(--black);
 }
 
-.border-black-95 {
-  --border-color: var(--black-95);
-}
-
-.border-black-90 {
-  --border-color: var(--black-90);
-}
-
-.border-black-80 {
-  --border-color: var(--black-80);
-}
-
-.border-black-70 {
-  --border-color: var(--black-70);
-}
-
-.border-black-60 {
-  --border-color: var(--black-60);
-}
-
-.border-black-50 {
-  --border-color: var(--black-50);
-}
-
-.border-black-40 {
-  --border-color: var(--black-40);
-}
-
-.border-black-30 {
-  --border-color: var(--black-30);
-}
-
-.border-black-20 {
-  --border-color: var(--black-20);
-}
-
-.border-black-10 {
-  --border-color: var(--black-10);
-}
-
-.border-black-05 {
-  --border-color: var(--black-05);
-}
-
-.border-black-025 {
-  --border-color: var(--black-025);
-}
-
-.border-black-0125 {
-  --border-color: var(--black-0125);
-}
-
 .border-white {
   --border-color: var(--white);
-}
-
-.border-white-95 {
-  --border-color: var(--white-95);
-}
-
-.border-white-90 {
-  --border-color: var(--white-90);
-}
-
-.border-white-80 {
-  --border-color: var(--white-80);
-}
-
-.border-white-70 {
-  --border-color: var(--white-70);
-}
-
-.border-white-60 {
-  --border-color: var(--white-60);
-}
-
-.border-white-50 {
-  --border-color: var(--white-50);
-}
-
-.border-white-40 {
-  --border-color: var(--white-40);
-}
-
-.border-white-30 {
-  --border-color: var(--white-30);
-}
-
-.border-white-20 {
-  --border-color: var(--white-20);
-}
-
-.border-white-10 {
-  --border-color: var(--white-10);
-}
-
-.border-white-05 {
-  --border-color: var(--white-05);
-}
-
-.border-white-025 {
-  --border-color: var(--white-025);
-}
-
-.border-white-0125 {
-  --border-color: var(--white-0125);
 }
 
 .border-gray {
@@ -4058,16 +3928,9 @@ hr {
   --border-color: var(--maroon);
 }
 
-.border-black, .border-black-95, .border-black-90, .border-black-80,
-.border-black-70, .border-black-60, .border-black-50, .border-black-40,
-.border-black-30, .border-black-20, .border-black-10, .border-black-05,
-.border-black-025, .border-black-0125, .border-white, .border-white-95,
-.border-white-90, .border-white-80, .border-white-70, .border-white-60,
-.border-white-50, .border-white-40, .border-white-30, .border-white-20,
-.border-white-10, .border-white-05, .border-white-025, .border-white-0125,
-.border-aqua, .border-blue, .border-navy, .border-teal, .border-green,
-.border-olive, .border-lime, .border-yellow, .border-orange, .border-red,
-.border-fuchsia, .border-purple, .border-maroon {
+.border-black, .border-white, .border-aqua, .border-blue, .border-navy,
+.border-teal, .border-green, .border-olive, .border-lime, .border-yellow,
+.border-orange, .border-red, .border-fuchsia, .border-purple, .border-maroon {
   border-color: var(--border-color);
 }
 
@@ -4275,112 +4138,8 @@ hr {
   color: var(--black);
 }
 
-.black-95 {
-  color: var(--black-95);
-}
-
-.black-90 {
-  color: var(--black-90);
-}
-
-.black-80 {
-  color: var(--black-80);
-}
-
-.black-70 {
-  color: var(--black-70);
-}
-
-.black-60 {
-  color: var(--black-60);
-}
-
-.black-50 {
-  color: var(--black-50);
-}
-
-.black-40 {
-  color: var(--black-40);
-}
-
-.black-30 {
-  color: var(--black-30);
-}
-
-.black-20 {
-  color: var(--black-20);
-}
-
-.black-10 {
-  color: var(--black-10);
-}
-
-.black-05 {
-  color: var(--black-05);
-}
-
-.black-025 {
-  color: var(--black-025);
-}
-
-.black-0125 {
-  color: var(--black-0125);
-}
-
 .white {
   color: var(--white);
-}
-
-.white-95 {
-  color: var(--white-95);
-}
-
-.white-90 {
-  color: var(--white-90);
-}
-
-.white-80 {
-  color: var(--white-80);
-}
-
-.white-70 {
-  color: var(--white-70);
-}
-
-.white-60 {
-  color: var(--white-60);
-}
-
-.white-50 {
-  color: var(--white-50);
-}
-
-.white-40 {
-  color: var(--white-40);
-}
-
-.white-30 {
-  color: var(--white-30);
-}
-
-.white-20 {
-  color: var(--white-20);
-}
-
-.white-10 {
-  color: var(--white-10);
-}
-
-.white-05 {
-  color: var(--white-05);
-}
-
-.white-025 {
-  color: var(--white-025);
-}
-
-.white-0125 {
-  color: var(--white-0125);
 }
 
 .gray {
@@ -4669,112 +4428,8 @@ hr {
   background-color: var(--black);
 }
 
-.bg-black-95 {
-  background-color: var(--black-95);
-}
-
-.bg-black-90 {
-  background-color: var(--black-90);
-}
-
-.bg-black-80 {
-  background-color: var(--black-80);
-}
-
-.bg-black-70 {
-  background-color: var(--black-70);
-}
-
-.bg-black-60 {
-  background-color: var(--black-60);
-}
-
-.bg-black-50 {
-  background-color: var(--black-50);
-}
-
-.bg-black-40 {
-  background-color: var(--black-40);
-}
-
-.bg-black-30 {
-  background-color: var(--black-30);
-}
-
-.bg-black-20 {
-  background-color: var(--black-20);
-}
-
-.bg-black-10 {
-  background-color: var(--black-10);
-}
-
-.bg-black-05 {
-  background-color: var(--black-05);
-}
-
-.bg-black-025 {
-  background-color: var(--black-025);
-}
-
-.bg-black-0125 {
-  background-color: var(--black-0125);
-}
-
 .bg-white {
   background-color: var(--white);
-}
-
-.bg-white-95 {
-  background-color: var(--white-95);
-}
-
-.bg-white-90 {
-  background-color: var(--white-90);
-}
-
-.bg-white-80 {
-  background-color: var(--white-80);
-}
-
-.bg-white-70 {
-  background-color: var(--white-70);
-}
-
-.bg-white-60 {
-  background-color: var(--white-60);
-}
-
-.bg-white-50 {
-  background-color: var(--white-50);
-}
-
-.bg-white-40 {
-  background-color: var(--white-40);
-}
-
-.bg-white-30 {
-  background-color: var(--white-30);
-}
-
-.bg-white-20 {
-  background-color: var(--white-20);
-}
-
-.bg-white-10 {
-  background-color: var(--white-10);
-}
-
-.bg-white-05 {
-  background-color: var(--white-05);
-}
-
-.bg-white-025 {
-  background-color: var(--white-025);
-}
-
-.bg-white-0125 {
-  background-color: var(--white-0125);
 }
 
 .bg-gray {
