@@ -5,34 +5,8 @@
 .bb { border-bottom: var(--border-width) solid var(--border-color); }
 
 .border-black      { --border-color: var(--black);      }
-.border-black-95   { --border-color: var(--black-95);   }
-.border-black-90   { --border-color: var(--black-90);   }
-.border-black-80   { --border-color: var(--black-80);   }
-.border-black-70   { --border-color: var(--black-70);   }
-.border-black-60   { --border-color: var(--black-60);   }
-.border-black-50   { --border-color: var(--black-50);   }
-.border-black-40   { --border-color: var(--black-40);   }
-.border-black-30   { --border-color: var(--black-30);   }
-.border-black-20   { --border-color: var(--black-20);   }
-.border-black-10   { --border-color: var(--black-10);   }
-.border-black-05   { --border-color: var(--black-05);   }
-.border-black-025  { --border-color: var(--black-025);  }
-.border-black-0125 { --border-color: var(--black-0125); }
 
 .border-white      { --border-color: var(--white);      }
-.border-white-95   { --border-color: var(--white-95);   }
-.border-white-90   { --border-color: var(--white-90);   }
-.border-white-80   { --border-color: var(--white-80);   }
-.border-white-70   { --border-color: var(--white-70);   }
-.border-white-60   { --border-color: var(--white-60);   }
-.border-white-50   { --border-color: var(--white-50);   }
-.border-white-40   { --border-color: var(--white-40);   }
-.border-white-30   { --border-color: var(--white-30);   }
-.border-white-20   { --border-color: var(--white-20);   }
-.border-white-10   { --border-color: var(--white-10);   }
-.border-white-05   { --border-color: var(--white-05);   }
-.border-white-025  { --border-color: var(--white-025);  }
-.border-white-0125 { --border-color: var(--white-0125); }
 
 .border-gray {
   --border-hue: var(--gray-hue);
@@ -58,33 +32,7 @@
 .border-maroon  { --border-color: var(--maroon);  }
 
 .border-black,
-.border-black-95,
-.border-black-90,
-.border-black-80,
-.border-black-70,
-.border-black-60,
-.border-black-50,
-.border-black-40,
-.border-black-30,
-.border-black-20,
-.border-black-10,
-.border-black-05,
-.border-black-025,
-.border-black-0125,
 .border-white,
-.border-white-95,
-.border-white-90,
-.border-white-80,
-.border-white-70,
-.border-white-60,
-.border-white-50,
-.border-white-40,
-.border-white-30,
-.border-white-20,
-.border-white-10,
-.border-white-05,
-.border-white-025,
-.border-white-0125,
 .border-aqua,
 .border-blue,
 .border-navy,
