@@ -68,34 +68,6 @@
   --gray-sat: 0%;
   --gray-lum: 50%;
 
-  --black-95: rgba(4, 4, 4, .95);
-  --black-90: rgba(4, 4, 4, .90);
-  --black-80: rgba(4, 4, 4, .80);
-  --black-70: rgba(4, 4, 4, .70);
-  --black-60: rgba(4, 4, 4, .60);
-  --black-50: rgba(4, 4, 4, .50);
-  --black-40: rgba(4, 4, 4, .40);
-  --black-30: rgba(4, 4, 4, .30);
-  --black-20: rgba(4, 4, 4, .20);
-  --black-10: rgba(4, 4, 4, .10);
-  --black-05: rgba(4, 4, 4, .05);
-  --black-025: rgba(4, 4, 4, .025);
-  --black-0125: rgba(4, 4, 4, .0125);
-
-  --white-95: rgba(255, 255, 255, .95);
-  --white-90: rgba(255, 255, 255, .90);
-  --white-80: rgba(255, 255, 255, .80);
-  --white-70: rgba(255, 255, 255, .70);
-  --white-60: rgba(255, 255, 255, .60);
-  --white-50: rgba(255, 255, 255, .50);
-  --white-40: rgba(255, 255, 255, .40);
-  --white-30: rgba(255, 255, 255, .30);
-  --white-20: rgba(255, 255, 255, .20);
-  --white-10: rgba(255, 255, 255, .10);
-  --white-05: rgba(255, 255, 255, .05);
-  --white-025: rgba(255, 255, 255, .025);
-  --white-0125: rgba(255, 255, 255, .0125);
-
   /* credit to http://clrs.cc/ */
   --aqua:    #7fdbff;
   --blue:    #0074d9;
